Add Comment Vote, Discussion Vote feature. Also refactoring ServiceResponse calls